--- a/Point/index.html
+++ b/Point/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <link rel="manifest" href="manifest.json" />
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Team Mendez</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dojo Chronos</title>
+  <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -113,3 +113,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
