--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dojo Chronos</title>
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#111">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -113,4 +114,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
