--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="tabs">
     <button onclick="mostrarSeccion('organizacion')">📋 Organización</button>
     <button onclick="window.open('combate.html', '_blank')">⚔️ Combate</button>
+    <button onclick="document.documentElement.requestFullscreen()">🖥️ Pantalla Completa</button>
   </div>
 
   <div id="organizacion" class="seccion">
@@ -47,7 +48,7 @@
 
         <table id="tabla">
           <thead>
-            <tr><th>Nombre</th><th>Escuela</th><th>Edad</th><th>Técnica</th><th>Peso</th></tr>
+            <tr><th>Nombre</th><th>Escuela</th><th>Edad</th><th>Categoria</th><th>Peso</th></tr>
           </thead>
           <tbody></tbody>
         </table>
