--- a/combate.html
+++ b/combate.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <button onclick="document.documentElement.requestFullscreen()">🖥️ Pantalla Completa</button>
   <div class="container">
     <header>
       <div id="mainTimer" class="neon">02:00</div>
